--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,18 +4,11 @@
 #
 version: 2
 jobs:
-  build:
+  build-and-test:
     docker:
       # specify the version you desire here
       - image: circleci/node:12.14.1
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
     working_directory: ~/repo
-
     steps:
       - checkout
 
@@ -35,3 +28,44 @@ jobs:
 
       # run tests!
       - run: npm test
+
+  push-to-gcloud:
+    docker:
+      - image: google/gcloud-sdk
+    environment:
+      - PROJECT_ID: sylvan-octagon-268211
+      - IMAGE_NAME: learn-cw-static
+    working_directory: ~/repo
+    steps:
+      - checkout:
+          path: ~/repo
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - run:
+            name: Build image
+            command: docker build --rm=false -f circleci.dockerfile -t us.gcr.io/$PROJECT_ID/$IMAGE_NAME:$CIRCLE_BUILD_NUM -t us.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest .
+      # https://cloud.google.com/container-registry/docs/pushing
+      - run:
+            name: Configure gcloud Auth for Docker
+            command: gcloud auth configure-docker
+      - run:
+            name: Setup auth key file
+            command: echo ${GOOGLE_AUTH} > ${HOME}/gcp-key.json
+      - run:
+            name: Authenticate with gcloud
+            command: gcloud auth activate-service-account --key-file ${HOME}/gcp-key.json
+      - run:
+            name: Push new image to gcloud registry
+            command: docker push us.gcr.io/$PROJECT_ID/$IMAGE_NAME:$CIRCLE_BUILD_NUM
+      - run:
+            name: Push to tag latest
+            command: docker push us.gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+
+workflows:
+  version: 2
+  build-and-push:
+    jobs:
+      - build-and-test
+      - push-to-gcloud
+        requires:
+          - build-and-test
